# GPU-FM-Inversion

./: .JuliaFormatter.toml  .clang-format  .gitignore  AGENTS.md  HANDOFF.md  Project.toml  config.jl  config_sample.jl  driver.sh  format.sh
assess/: Project.toml
assess/src/: assess.jl  grid_refinement.jl
assess/test/: Project.toml  runtests.jl  test_assess_stage.jl
doc/: design.md  handoff-2025-06-22.md  handoff-2025-06-23.md  plan.md  schema.md  session-summary-2025-06-22.md
doc/modules/: aggregator.md  convergence.md  data_cache.md  hdf5_io.md  misfit_kernel.md  mt_utils.md  solution_comp.md  trial_gen.md  waveform_proc.md
doc/old/: algorithm.md  architecture.md  dependencies.md  parallelism.md
doc/stages/: assess.md  driver.md  export.md  forward.md  input.md  output.md  preprocess.md  setup.md
examples/: gen_synthetic.sh
examples/event1/: .gitignore
forward/: AGENTS.md  CMakeLists.txt
forward/src/: data_cache.cpp  data_cache.h  hdf5_io.cpp  hdf5_io.h  main.cpp  mt_utils.cpp  mt_utils.h
forward/src/backends/: device.h
forward/src/kernels/: polarity_kernel.h  psr_kernel.h  xcorr_kernel.h
forward/tests/: test_cross_lang.cpp  test_data_cache.cpp  test_hdf5_roundtrip.cpp  test_misfit_kernels.cpp  test_mt_to_csv.cpp  test_xcorr.cpp
input/: Project.toml
input/src/: input.jl  preprocess.jl
input/test/: runtests.jl  test_input_stage.jl
output/: Project.toml
output/src/: output.jl  solution_comp.jl
output/test/: runtests.jl  test_output_stage.jl
preprocess/: Project.toml
preprocess/src/: preprocess.jl  trial_gen.jl
preprocess/test/: runtests.jl  test_preprocess_stage.jl
scripts/: assess.jl  input.jl  output.jl  preprocess.jl
shared/AssessUtils.jl/: Project.toml
shared/AssessUtils.jl/src/: AssessUtils.jl
shared/AssessUtils.jl/test/: runtests.jl
shared/HDF5IO.jl/: Project.toml
shared/HDF5IO.jl/src/: HDF5IO.jl
shared/HDF5IO.jl/test/: runtests.jl
shared/MTUtils.jl/: Project.toml
shared/MTUtils.jl/src/: MTUtils.jl
shared/MTUtils.jl/test/: runtests.jl
shared/TrialGen.jl/: Project.toml
shared/TrialGen.jl/src/: TrialGen.jl
shared/WaveformPreprocessing.jl/: Project.toml
shared/WaveformPreprocessing.jl/src/: WaveformPreprocessing.jl
shared/aggregate/: AGENTS.md  Project.toml
shared/aggregate/src/: Aggregate.jl
shared/config/: AGENTS.md  Project.toml
shared/config/src/: Config.jl
shared/grid/: AGENTS.md  Project.toml
shared/grid/src/: Grid.jl  grid_refinement.jl  trial_gen.jl
shared/io/: AGENTS.md  Project.toml
shared/io/src/: IO.jl
shared/io/test/: runtests.jl
shared/mt/: AGENTS.md  Project.toml
shared/mt/src/: MT.jl
shared/mt/test/: runtests.jl
shared/signal/: AGENTS.md  Project.toml
shared/signal/src/: Signal.jl
shared/stage_log/: AGENTS.md  Project.toml
shared/stage_log/src/: StageLog.jl
tests/: run_cross_lang.sh  synthetic_data.jl  test_cross_lang.jl  test_e2e.jl  test_e2e.sh  test_mt_consistency.jl
